[package]
name = "burst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_ec2 = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_core = "0.48.0"
ssh2 = "0.9.4"
tokio = { version = "1", features = ["full"] }
